# waffle

./: .gitignore  CMakeLists.txt  README.md  config.ini  config.ini.example  copyimage.cpp  main.cpp
.github/: copilot-instructions.md
